@@ -450,6 +450,16 @@
 	      <signal name="activate" handler="on_screen_options1_activate" last_modification_time="Fri, 14 May 2004 15:34:09 GMT"/>
 	    </widget>
 	  </child>
+
+	  <child>
+	    <widget class="GtkCheckMenuItem" id="copy_to_clipboard1">
+	      <property name="visible">True</property>
+	      <property name="label" translatable="yes">_Copy to clipboard</property>
+	      <property name="use_underline">True</property>
+	      <property name="active">False</property>
+	      <signal name="activate" handler="on_copy_to_clipboard1_activate" last_modification_time="Sun, 16 Sep 2007 19:16:42 GMT"/>
+	    </widget>
+	  </child>
 	</widget>
       </child>
     </widget>
@@ -537,7 +547,7 @@
 	      <accelerator key="H" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image120">
+		<widget class="GtkImage" id="image124">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-help</property>
 		  <property name="icon_size">1</property>
@@ -560,7 +570,7 @@
 	      <accelerator key="M" modifiers="GDK_CONTROL_MASK" signal="activate"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image121">
+		<widget class="GtkImage" id="image125">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-index</property>
 		  <property name="icon_size">1</property>
@@ -651,7 +661,7 @@
 	      <signal name="activate" handler="on_bugreport1_activate" last_modification_time="Sun, 20 Feb 2005 17:58:57 GMT"/>
 
 	      <child internal-child="image">
-		<widget class="GtkImage" id="image122">
+		<widget class="GtkImage" id="image126">
 		  <property name="visible">True</property>
 		  <property name="stock">gtk-execute</property>
 		  <property name="icon_size">1</property>
